# HadesModLoader

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
core/: CMakeLists.txt
core/src/: HookTable.cpp  HookTable.h  HooksSystem.cpp  HooksSystem.h  LuaManager.cpp  LuaManager.h  Mod.cpp  Mod.h  ModApi.cpp  ModApi.h  ModManager.cpp  ModManager.h  ModMetaParser.cpp  ModMetaParser.h  SymbolLoader.cpp  SymbolLoader.h  main.cpp  pch.h
core/src/hooks/: CreateFileHook.cpp  CreateFileHook.h  FunctionHook.h  LoadBufferHook.cpp  LoadBufferHook.h  LocalizationHook.cpp  LocalizationHook.h
core/src/include/: HadesModApi.h
core/src/lua/: ModLuaDefs.cpp  ModLuaDefs.h  TempValuesLuaDefs.cpp  TempValuesLuaDefs.h
libs/libdetours/: CMakeLists.txt
libs/lua-5.2.2/: CMakeLists.txt
loader/: CMakeLists.txt
loader-dllhook/: CMakeLists.txt  xinput_exports.def
loader-dllhook/src/: main.cpp
loader/src/: main.cpp
